fix text wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -298,17 +298,11 @@ body, html {
 	text-align: left;}
 
 /* Override for the text block to allow normal wrapping */
-.side-scroll .text-block {
+.side-scroll .upper-left, .lower-right{
     white-space: normal;
 }
-.text-block {
-	color: #fff; /* Assuming white text as per the image */
-	background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-	border-left: 5px solid #007bff; /* Bootstrap primary color for the vertical line */
-	padding-left: 20px; /* Spacing before the text to align with the vertical line */
-	margin-bottom: 30px; /* Spacing after the block */
-	max-width: 1000px;
-}
+
+
 	
 h2.display-4 {
 	font-size: 1.5rem;
